src/antlr/AngularParser.java
// Generated from C:/Users/pc/IdeaProjects/AngularCompiler/src/antlr/AngularParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngularParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, FROM=2, NEW=3, COMPONENT=4, SELECTOR=5, STANDALONE=6, TRUE=7, 
		FALSE=8, IMPORTS=9, STYLES=10, TEMPLATE=11, EXPORT=12, CLASS=13, THIS=14, 
		ANY=15, RETURN=16, BREAK=17, IF=18, ELSE=19, FOR=20, WHILE=21, LET=22, 
		INTERFACE=23, LBRACE=24, RBRACE=25, LBRACKET=26, RBRACKET=27, LPAREN=28, 
		RPAREN=29, COLON=30, COMMA=31, SEMI=32, DOT=33, HASH=34, DQUOTE=35, SQUOTE=36, 
		EQUALS=37, INCREMENT=38, ARROW=39, QUESTION=40, PLUS=41, MINUS=42, MULT=43, 
		DIV=44, MOD=45, LT=46, GT=47, LE=48, GE=49, EQ=50, NEQ=51, AND=52, OR=53, 
		NOT=54, NUMBER=55, STRING_LITERAL=56, BACKTICK_OPEN=57, WS=58, COMMENT=59, 
		MULTILINE_COMMENT=60, IDENTIFIER=61, BACKTICK_CLOSE=62, HTML_END_LT=63, 
		HTML_LT=64, HTML_GT=65, HTML_SLASH_GT=66, HTML_SLASH=67, HTML_EQ=68, ATTR_LBRACK=69, 
		ATTR_RBRACK=70, ATTR_LPAREN=71, ATTR_RPAREN=72, ATTR_STAR=73, INTERPOLATION=74, 
		TPL_STRING=75, HTML_NAME=76, HTML_TEXT=77, CSS_LBRACE=78, CSS_RBRACE=79, 
		CSS_COLON=80, CSS_SEMI=81, CSS_COMMA=82, CSS_IDENT=83, CSS_TEXT=84, TPL_OTHER=85;
	public static final int
		RULE_program = 0, RULE_importStatement = 1, RULE_importItems = 2, RULE_importItem = 3, 
		RULE_modulePath = 4, RULE_interfaceDeclaration = 5, RULE_interfaceMember = 6, 
		RULE_componentDefinition = 7, RULE_componentConfig = 8, RULE_componentProperty = 9, 
		RULE_arrayLiteral = 10, RULE_arrayItem = 11, RULE_classDeclaration = 12, 
		RULE_classBody = 13, RULE_classMember = 14, RULE_fieldDeclaration = 15, 
		RULE_methodDeclaration = 16, RULE_parameterList = 17, RULE_parameter = 18, 
		RULE_typeAnnotation = 19, RULE_typePrimary = 20, RULE_inlineObjectType = 21, 
		RULE_objectTypeMember = 22, RULE_block = 23, RULE_statement = 24, RULE_variableDeclaration = 25, 
		RULE_expressionStatement = 26, RULE_returnStatement = 27, RULE_ifStatement = 28, 
		RULE_forStatement = 29, RULE_breakStatement = 30, RULE_forInit = 31, RULE_whileStatement = 32, 
		RULE_expression = 33, RULE_assignmentExpression = 34, RULE_conditionalExpression = 35, 
		RULE_logicalOrExpression = 36, RULE_logicalAndExpression = 37, RULE_equalityExpression = 38, 
		RULE_relationalExpression = 39, RULE_additiveExpression = 40, RULE_multiplicativeExpression = 41, 
		RULE_unaryExpression = 42, RULE_postfixExpression = 43, RULE_postfixPart = 44, 
		RULE_functionCall = 45, RULE_propertyAccess = 46, RULE_postfixIncrement = 47, 
		RULE_primaryExpression = 48, RULE_newExpression = 49, RULE_arrowFunction = 50, 
		RULE_arrowParams = 51, RULE_objectLiteral = 52, RULE_keyValue = 53, RULE_literal = 54, 
		RULE_booleanLiteral = 55, RULE_qualifiedName = 56, RULE_templateHtml = 57, 
		RULE_templateNode = 58, RULE_element = 59, RULE_attribute = 60, RULE_plainAttribute = 61, 
		RULE_boundProperty = 62, RULE_boundEvent = 63, RULE_twoWayBinding = 64, 
		RULE_structuralDirective = 65, RULE_interpolation = 66, RULE_htmlText = 67, 
		RULE_cssOrTemplateItem = 68, RULE_cssRules = 69, RULE_cssRule = 70, RULE_cssDeclaration = 71, 
		RULE_cssText = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "importStatement", "importItems", "importItem", "modulePath", 
			"interfaceDeclaration", "interfaceMember", "componentDefinition", "componentConfig", 
			"componentProperty", "arrayLiteral", "arrayItem", "classDeclaration", 
			"classBody", "classMember", "fieldDeclaration", "methodDeclaration", 
			"parameterList", "parameter", "typeAnnotation", "typePrimary", "inlineObjectType", 
			"objectTypeMember", "block", "statement", "variableDeclaration", "expressionStatement", 
			"returnStatement", "ifStatement", "forStatement", "breakStatement", "forInit", 
			"whileStatement", "expression", "assignmentExpression", "conditionalExpression", 
			"logicalOrExpression", "logicalAndExpression", "equalityExpression", 
			"relationalExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "postfixExpression", "postfixPart", "functionCall", 
			"propertyAccess", "postfixIncrement", "primaryExpression", "newExpression", 
			"arrowFunction", "arrowParams", "objectLiteral", "keyValue", "literal", 
			"booleanLiteral", "qualifiedName", "templateHtml", "templateNode", "element", 
			"attribute", "plainAttribute", "boundProperty", "boundEvent", "twoWayBinding", 
			"structuralDirective", "interpolation", "htmlText", "cssOrTemplateItem", 
			"cssRules", "cssRule", "cssDeclaration", "cssText"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'from'", "'new'", "'@Component'", "'selector'", "'standalone'", 
			"'true'", "'false'", "'imports'", "'styles'", "'template'", "'export'", 
			"'class'", "'this'", "'any'", "'return'", "'break'", "'if'", "'else'", 
			"'for'", "'while'", "'let'", "'interface'", null, null, null, null, null, 
			null, null, null, null, "'.'", "'#'", "'\"'", "'''", null, "'++'", "'=>'", 
			"'?'", "'+'", "'-'", null, null, "'%'", null, null, "'<='", "'>='", "'=='", 
			"'!='", "'&&'", "'||'", "'!'", null, null, null, null, null, null, null, 
			null, "'</'", null, null, "'/>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "FROM", "NEW", "COMPONENT", "SELECTOR", "STANDALONE", 
			"TRUE", "FALSE", "IMPORTS", "STYLES", "TEMPLATE", "EXPORT", "CLASS", 
			"THIS", "ANY", "RETURN", "BREAK", "IF", "ELSE", "FOR", "WHILE", "LET", 
			"INTERFACE", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "LPAREN", "RPAREN", 
			"COLON", "COMMA", "SEMI", "DOT", "HASH", "DQUOTE", "SQUOTE", "EQUALS", 
			"INCREMENT", "ARROW", "QUESTION", "PLUS", "MINUS", "MULT", "DIV", "MOD", 
			"LT", "GT", "LE", "GE", "EQ", "NEQ", "AND", "OR", "NOT", "NUMBER", "STRING_LITERAL", 
			"BACKTICK_OPEN", "WS", "COMMENT", "MULTILINE_COMMENT", "IDENTIFIER", 
			"BACKTICK_CLOSE", "HTML_END_LT", "HTML_LT", "HTML_GT", "HTML_SLASH_GT", 
			"HTML_SLASH", "HTML_EQ", "ATTR_LBRACK", "ATTR_RBRACK", "ATTR_LPAREN", 
			"ATTR_RPAREN", "ATTR_STAR", "INTERPOLATION", "TPL_STRING", "HTML_NAME", 
			"HTML_TEXT", "CSS_LBRACE", "CSS_RBRACE", "CSS_COLON", "CSS_SEMI", "CSS_COMMA", 
			"CSS_IDENT", "CSS_TEXT", "TPL_OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngularParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngularParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AngularParser.EOF, 0); }
		public List<ImportStatementContext> importStatement() {
			return getRuleContexts(ImportStatementContext.class);
		}
		public ImportStatementContext importStatement(int i) {
			return getRuleContext(ImportStatementContext.class,i);
		}
		public List<InterfaceDeclarationContext> interfaceDeclaration() {
			return getRuleContexts(InterfaceDeclarationContext.class);
		}
		public InterfaceDeclarationContext interfaceDeclaration(int i) {
			return getRuleContext(InterfaceDeclarationContext.class,i);
		}
		public List<ComponentDefinitionContext> componentDefinition() {
			return getRuleContexts(ComponentDefinitionContext.class);
		}
		public ComponentDefinitionContext componentDefinition(int i) {
			return getRuleContext(ComponentDefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(146);
				importStatement();
				}
				}
				setState(151);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(154);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INTERFACE:
					{
					setState(152);
					interfaceDeclaration();
					}
					break;
				case COMPONENT:
					{
					setState(153);
					componentDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(156); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMPONENT || _la==INTERFACE );
			setState(158);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
	 
		public ImportStatementContext() { }
		public void copyFrom(ImportStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ImportStatementContext {
		public TerminalNode IMPORT() { return getToken(AngularParser.IMPORT, 0); }
		public ImportItemsContext importItems() {
			return getRuleContext(ImportItemsContext.class,0);
		}
		public TerminalNode FROM() { return getToken(AngularParser.FROM, 0); }
		public ModulePathContext modulePath() {
			return getRuleContext(ModulePathContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AngularParser.SEMI, 0); }
		public ImportStmtContext(ImportStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importStatement);
		int _la;
		try {
			_localctx = new ImportStmtContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(IMPORT);
			setState(161);
			importItems();
			setState(162);
			match(FROM);
			setState(163);
			modulePath();
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(164);
				match(SEMI);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportItemsContext extends ParserRuleContext {
		public ImportItemsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importItems; }
	 
		public ImportItemsContext() { }
		public void copyFrom(ImportItemsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportItemListContext extends ImportItemsContext {
		public TerminalNode LBRACE() { return getToken(AngularParser.LBRACE, 0); }
		public List<ImportItemContext> importItem() {
			return getRuleContexts(ImportItemContext.class);
		}
		public ImportItemContext importItem(int i) {
			return getRuleContext(ImportItemContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(AngularParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(AngularParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngularParser.COMMA, i);
		}
		public ImportItemListContext(ImportItemsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportItemList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportItemList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportItemList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportItemsContext importItems() throws RecognitionException {
		ImportItemsContext _localctx = new ImportItemsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importItems);
		int _la;
		try {
			_localctx = new ImportItemListContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(167);
			match(LBRACE);
			setState(168);
			importItem();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(169);
				match(COMMA);
				setState(170);
				importItem();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(176);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportItemContext extends ParserRuleContext {
		public ImportItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importItem; }
	 
		public ImportItemContext() { }
		public void copyFrom(ImportItemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportNameContext extends ImportItemContext {
		public TerminalNode IDENTIFIER() { return getToken(AngularParser.IDENTIFIER, 0); }
		public ImportNameContext(ImportItemContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterImportName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitImportName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitImportName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportItemContext importItem() throws RecognitionException {
		ImportItemContext _localctx = new ImportItemContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importItem);
		try {
			_localctx = new ImportNameContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModulePathContext extends ParserRuleContext {
		public ModulePathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modulePath; }
	 
		public ModulePathContext() { }
		public void copyFrom(ModulePathContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ModulePathStringContext extends ModulePathContext {
		public TerminalNode STRING_LITERAL() { return getToken(AngularParser.STRING_LITERAL, 0); }
		public ModulePathStringContext(ModulePathContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterModulePathString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitModulePathString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitModulePathString(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModulePathContext modulePath() throws RecognitionException {
		ModulePathContext _localctx = new ModulePathContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_modulePath);
		try {
			_localctx = new ModulePathStringContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(STRING_LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclarationContext extends ParserRuleContext {
		public InterfaceDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_interfaceDeclaration; }
	 
		public InterfaceDeclarationContext() { }
		public void copyFrom(InterfaceDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InterfaceDeclContext extends InterfaceDeclarationContext {
		public TerminalNode INTERFACE() { return getToken(AngularParser.INTERFACE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(AngularParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(AngularParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(AngularParser.RBRACE, 0); }
		public List<InterfaceMemberContext> interfaceMember() {
			return getRuleContexts(InterfaceMemberContext.class);
		}
		public InterfaceMemberContext interfaceMember(int i) {
			return getRuleContext(InterfaceMemberContext.class,i);
		}
		public InterfaceDeclContext(InterfaceDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).enterInterfaceDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngularParserListener ) ((AngularParserListener)listener).exitInterfaceDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngularParserVisitor ) return ((AngularParserVisitor<? extends T>)visitor).visitInterfaceDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InterfaceDeclarationContext interfaceDeclaration() throws RecognitionException {
		InterfaceDeclarationContext _localctx = new InterfaceDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_interfaceDeclaration);
		int _la;
		try {
			_localctx = new InterfaceDeclContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(INTERFACE);
			setState(183);
			match(IDENTIFIER);
			setState(184);
			match(LBRACE);
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(185);
				interfaceMember();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(191);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
